--- a/deployment/eda.yaml
+++ b/deployment/eda.yaml
@@ -1,26 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: bank-base
+  name: eda
   labels:
-    app: bank-base
-    target: bank-base
+    app: eda
+    target: eda
 spec:
   selector:
     matchLabels:
-      target: bank-base
+      target: eda
   replicas: 1
   template:
     metadata:
       labels:
-        target: bank-base
+        target: eda
     spec:
       containers:
-        - name: bank-base-core
-          image: mongo
+        - name: container
+          image: eda
           imagePullPolicy: Always
+          env:
+            - name: GET_HOSTS_FROM
+              value: dns
+          command: ["python3","./eda.py"]
           ports:
             - containerPort: 80
-            - containerPort: 27017
       dnsPolicy: ClusterFirst
       restartPolicy: Always
