--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "react-tabulator": "^0.10.3"
+    "tabulator-tables": "^4.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
