--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "billboard.js": "^1.12.0-next.5",
     "materialize-css": "^1.0.0-rc.2",
     "md5": "^2.2.1",
+    "plotly.js-dist": "^1.53.0",
     "react": "^16.12.0",
+    "react-billboardjs": "^1.5.4",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
