--- a/deployment/eda.yaml
+++ b/deployment/eda.yaml
@@ -18,12 +18,13 @@ spec:
       containers:
         - name: container
           image: eda
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: GET_HOSTS_FROM
               value: dns
-          command: ["python3","./eda.py"]
+            - name: MONGO_URL
+              value: mongodb://mongo-service:27017/
           ports:
-            - containerPort: 80
+            - containerPort: 6001
       dnsPolicy: ClusterFirst
       restartPolicy: Always
