--- a/deployment/ui.yaml
+++ b/deployment/ui.yaml
@@ -17,12 +17,13 @@ spec:
     spec:
       containers:
         - name: container
-          image: ui
-          imagePullPolicy: Always
+          image: frontend
+          imagePullPolicy: IfNotPresent
           env:
             - name: GET_HOSTS_FROM
               value: dns
-          command: ["python3","./ui.py"]
+            - name: MONGO_URL
+              value: mongodb://mongo-service:27017/
           ports:
             - containerPort: 80
       dnsPolicy: ClusterFirst
