System Testing code

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:latest
+FROM frontend:latest
 WORKDIR /app
 COPY . /app
 EXPOSE 3000
-RUN npm install --save md5
+#RUN npm install --save md5
 CMD ["npm","start"]
